[project]
name = "todo-backend"
version = "0.1.0"
description = "Phase II Backend for Evolution of Todo"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "sqlmodel>=0.0.8",
    "psycopg2-binary>=2.9.6",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
